--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -1,7 +1,6 @@
 <h1>Figures</h1>
 <ul>
-  <% @figures = Figure.all.sort { |fig| fig.name } %>
-  <% @figures.each do |figure| %>
+  <% Figure.all.each do |figure| %>
     <li>
       <a href="/figures/<%= figure.id %>">
         <%= figure.name %>
