--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -4,7 +4,8 @@
   <% @landmarks.each do |landmark| %>
     <li>
       <a href="/landmarks/<%= landmark.id %>">
-        <%= landmark.name %>
+        Name: <%= landmark.name %><br>
+        Year Completed: <%= landmark.year_completed %>
       </a>
     </li>
   <% end %>
