--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,5 +1,5 @@
 <h1>Add a new Landmark!</h1>
-<form action="/figures" method="post">
+<form action="/landmarks" method="post">
   <label>Name:</label><br>
   <input type="text" name="landmark[name]" id="landmark_name">
   <br><br>
@@ -8,7 +8,7 @@
   <br><br>
   <label>Select figure:</label><br>
   <% Figure.all.each do |figure| %>
-    <input type="radio" name="landmark[figure]" value="<%= figure.id %>" id="figure_<%= figure.id %>">
+    <input type="radio" name="landmark[figure][id]" value="<%= figure.id %>" id="figure_<%= figure.id %>">
       <%= figure.name %>
     </input>
     <br>
